button align fixed

--- a/swift-chat-client/src/Components/error.css
+++ b/swift-chat-client/src/Components/error.css
@@ -100,7 +100,7 @@ body {
     max-width: 100%;
     padding: 0 30px;
   }
-  button {
+ .backHom {
     margin-left: 30px;
   }
 }
